# crypto-native-lib

./: Cargo.toml  Readme.md  cbindgen.toml
.github/workflows/: relyance-sci.yml
scripts/: generate-xcframework.sh
src/: lib.rs  libsemaphore.h
