[package]
name = "crypto-native-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "972b342" }
serde = "1.0"
serde_json = "1.0"

[lib]
name = "cryptonative"
crate-type = ["staticlib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
